--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # dependencies
 /node_modules
 
+
+/server/node_modules/
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
@@ -44,3 +47,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+*.js
