--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "serve": "concurrently \"ts-node server/server.ts\" \"ng serve\""
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.1000.3",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "angular-linq": "^1.0.6",
     "hammerjs": "^2.0.8",
     "linqts": "^1.14.2",
